syntax = "proto3";
package bptypes;

message Signature {
    string R = 1;
    string S = 2;
}

message PublicKey {
    bytes PublicKey = 1;
}

message Hash {
    bytes Hash = 1;
}

message Address {
    bytes Address = 1;
}

message Tx {
    Hash TxHash = 1;
    TxData txdata = 2;
}

message TxData {
    uint64 AccountNonce = 1;
    Address Recipient = 2;
    bytes Amount = 3;
    bytes Payload = 4;

    Signature Sig = 5;
    PublicKey publicKey = 6;
}

message Header {
    int32 Version = 1;
    Address Producer = 2;
    Hash Root = 3;
    Hash Parent = 4;
    Hash MerkleRoot = 5;
    bytes Timestamp = 6;
}

message SignedHeader {
    Header Header = 1;
    Hash BlockHash = 2;
    PublicKey Signee = 3;
    Signature Signature = 4;
}

message Block {
    SignedHeader Header = 1;
    repeated Tx Tx = 2;
}